--- a/src/content.html
+++ b/src/content.html
@@ -11,7 +11,7 @@
 
     <!--Basic meta info -->
     <meta content="My Webclass Homepage | Privacy Policy" name="keywords">
-    <meta content="Keith Williams" name="author"/>
+    <meta content="Kevin Lin, Rick Kanashiro, Lucicto Selva" name="author"/>
     <meta content="A project to provide educational resources to web development teachers" name="description">
 
     <!--OpenGraph meta -->
