--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
     <!--Basic meta info -->
     <meta name="keywords" content="My Webclass Homepage">
-    <meta name="author" content="Keith Williams"/>
+    <meta content="Kevin Lin, Rick Kanashiro, Lucicto Selva" name="author"/>
     <meta name="description" content="A project to help educators integrate new technoliges into their teaching">
 
     <!--OpenGraph meta -->
